add second viewport

--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
             <span class="title-banner-letters-end">N</span>
         </div>
     </div>
-    <div class="v2"></div>
+    <div class="v2">
+        <span class="brackets" id="bracket-left">(</span>
+        <span id="heading1">PORT<span class="heading1-wide">E</span>Z <span class="heading1-wide">U</span>N <br>MA<span class="heading1-wide">S</span>QUE</span>
+        <span class="brackets" id="bracket-right">)</span>
+    </div>
     <div class="v3"></div>
     <div class="v4"></div>
     <div class="v5"></div>
 </body>
 </html>
+
+<!-- can make the two brackets move in and out ()  (  )  (    )  (  )  () -->
