add first round of photos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
+    <script defer src="js/in-view.min.js"></script>
     <script defer src="js/main.js"></script>
-    <!-- Well look at that, Tarek Nagy can code as well! -->
+    <!-- Well look at that, Tarek Nagy can code as well! tareknagy.com -->
 </head>
 <body>
     <div class="landing">
@@ -39,14 +40,16 @@
             <span class="title-banner-letters-end">N</span>
         </div>
     </div>
-    <div class="v2">
+    <div id="v2">
         <span class="brackets" id="bracket-left">(</span>
-        <span id="heading1">PORT<span class="heading1-wide">E</span>Z <span class="heading1-wide">U</span>N <br>MA<span class="heading1-wide">S</span>QUE</span>
+        <span><img class="bracket-image" src="images/face_upload.jpg" alt="covid face crop"></span>
         <span class="brackets" id="bracket-right">)</span>
     </div>
-    <div class="v3"></div>
-    <div class="v4"></div>
-    <div class="v5"></div>
+    <div id="v3">
+        <span id="heading1">PORT<span class="heading1-wide">E</span>Z <span class="heading1-wide">U</span>N <br>MA<span class="heading1-wide">S</span>QUE</span>
+    </div>
+    <div id="v4"></div>
+    <div id="v5"></div>
 </body>
 </html>
 
