--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
     <div id="v3">
         <span id="heading1">PORT<span class="heading1-wide">E</span>Z <span class="heading1-wide">U</span>N <br>MA<span class="heading1-wide">S</span>QUE</span>
     </div>
-    <div id="v4"></div>
+    <div id="v4">
+        <div>
+            <span class='section-heading'>Le port du masque obligatoire ici.</span><span class='section-copy'> Il doit couvrir le nez (&nbsp&nbsp), la bouche (&nbsp&nbsp), et le menton (&nbsp&nbsp).</span>
+        </div>
+    </div>
     <div id="v5"></div>
 </body>
 </html>
