fix to background colour

--- a/index.html
+++ b/index.html
@@ -40,21 +40,23 @@
             <span class="title-banner-letters-end">N</span>
         </div>
     </div>
-    <div id="v2">
-        <span class="brackets" id="bracket-left">(</span>
-        <span><img class="bracket-image" src="images/face_upload.jpg" alt="covid face crop"></span>
-        <span class="brackets" id="bracket-right">)</span>
-    </div>
-    <div id="v3">
-        <span id="heading1">PO<span class="heading1-wide">R</span>TEZ <span class="heading1-wide">U</span>N <br>MA<span class="heading1-wide">S</span>QUE</span>
-    </div>
-    <div id="v4">
-        <div>
-            <span class='section-heading'>Dois-je porter un masque?</span><span class='section-copy'> Le port du masque est un moyen simple d’empécher la propagation de la COVID-19. Suivez les conseils de votre état ou territoire, car il est parfois obligatoire. C'est recommandé de porter un masque dans les espaces intérieurs publics et lorsqu’il est difficile de maintenir l’éloignement physique. Consultez votre médecin si une condition médicale le rend difficile de porter d'un masque.</span><br><br>
-            <span class='section-heading'>Comment porter un masque.</span><span class='section-copy'> Lavez-vous les main avant et après de mettre un masque, ou si vous le touches. Assurez-vous que le masque couvre le nez (&nbsp&nbsp), la bouche (&nbsp&nbsp), et le menton (&nbsp&nbsp). Ne jamais réutiliser un masque jetable.</span><br><br>
-            <span class='section-heading'>Comment se protéger en plus.</span><span class='section-copy'> Lavez-vous souvent les mains et utilisez du désinfectant, pratiquez l’éloignement physique (1.5m), et téléchargez l’application CovidSafe.</span><br><br>
-            <span class='section-heading'>Si vous êtes malade, faites-vous dépister et restez chez vous.</span><br><br>
-            <span class='section-heading'>Plus d’information.</span><span class='section-copy'> Pour en savoir plus, appelez les services de traduction et d’interprétation au 131 450 ou visitez health.gov.au</span><br><br>
+    <div id="v-copy">
+        <div id="v2">
+            <span class="brackets" id="bracket-left">(</span>
+            <span><img class="bracket-image" src="images/face_upload.jpg" alt="covid face crop"></span>
+            <span class="brackets" id="bracket-right">)</span>
+        </div>
+        <div id="v3">
+            <span id="heading1">PO<span class="heading1-wide">R</span>TEZ <span class="heading1-wide">U</span>N <br>MA<span class="heading1-wide">S</span>QUE</span>
+        </div>
+        <div id="v4">
+            <div>
+                <span class='section-heading'>Dois-je porter un masque?</span><span class='section-copy'> Le port du masque est un moyen simple d’empécher la propagation de la COVID-19. Suivez les conseils de votre état ou territoire, car il est parfois obligatoire. C'est recommandé de porter un masque dans les espaces intérieurs publics et lorsqu’il est difficile de maintenir l’éloignement physique. Consultez votre médecin si une condition médicale le rend difficile de porter d'un masque.</span><br><br>
+                <span class='section-heading'>Comment porter un masque.</span><span class='section-copy'> Lavez-vous les main avant et après de mettre un masque, ou si vous le touches. Assurez-vous que le masque couvre le nez (&nbsp&nbsp), la bouche (&nbsp&nbsp), et le menton (&nbsp&nbsp). Ne jamais réutiliser un masque jetable.</span><br><br>
+                <span class='section-heading'>Comment se protéger en plus.</span><span class='section-copy'> Lavez-vous souvent les mains et utilisez du désinfectant, pratiquez l’éloignement physique (1.5m), et téléchargez l’application CovidSafe.</span><br><br>
+                <span class='section-heading'>Si vous êtes malade, faites-vous dépister et restez chez vous.</span><br><br>
+                <span class='section-heading'>Plus d’information.</span><span class='section-copy'> Pour en savoir plus, appelez les services de traduction et d’interprétation au 131 450 ou visitez health.gov.au</span><br><br>
+            </div>
         </div>
     </div>
     <div id="v5"></div>
