update links at bottom

--- a/index.html
+++ b/index.html
@@ -55,12 +55,17 @@
                 <span class='section-heading'>Comment porter un masque.</span><span class='section-copy'> Lavez-vous les main avant et après de mettre un masque, ou si vous le touches. Assurez-vous que le masque couvre le nez (&nbsp&nbsp), la bouche (&nbsp&nbsp), et le menton (&nbsp&nbsp). Ne jamais réutiliser un masque jetable.</span><br><br>
                 <span class='section-heading'>Comment se protéger en plus.</span><span class='section-copy'> Lavez-vous souvent les mains et utilisez du désinfectant, pratiquez l’éloignement physique (1.5m), et téléchargez l’application CovidSafe.</span><br><br>
                 <span class='section-heading'>Si vous êtes malade, faites-vous dépister et restez chez vous.</span><br><br>
-                <span class='section-heading'>Plus d’information.</span><span class='section-copy'> Pour en savoir plus, appelez les services de traduction et d’interprétation au 131 450 ou visitez health.gov.au</span><br><br>
+                <span class='section-heading'>Plus d’information.</span><span class='section-copy'> Pour en savoir plus, appelez les services de traduction et d’interprétation au 131 450 ou visitez <a href="http://www.health.gov.au" target="_blank"> health.gov.au</a></span><br><br>
             </div>
         </div>
     </div>
-    <div id="v5"></div>
+    <div id="v5">
+        <div id="links">
+            <span class="link-holder"><span class="brackets-bottom" id="bracket-bottom-left">(</span><span class="link-text">LAVER LES<br>MAIN</span><span class="brackets-bottom" id="bracket-bottom-right">)</span></span>
+            <span class="link-holder"><span class="brackets-bottom" id="bracket-bottom-left">(</span><span class="link-text">PORTEZ UN<br>MASQUE</span><span class="brackets-bottom" id="bracket-bottom-right">)</span></span>
+            <span class="link-holder"><span class="brackets-bottom" id="bracket-bottom-left">(</span><span class="link-text">L'ÉLOIGNEMENT<br>PHYSIQUE</span><span class="brackets-bottom" id="bracket-bottom-right">)</span></span>
+        </div>
+        <span class="contact">site by<a href="https://www.tareknagy.com" target="_blank" alt="Tarek Nagy Graphic Design Website">&nbsp<b>Tarek Nagy</b></a></span>
+    </div>
 </body>
 </html>
-
-<!-- can make the two brackets move in and out ()  (  )  (    )  (  )  () -->
