text appear at bottom

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div id="v5">
-        <div id="links">
+        <div class="links">
             <span class="link-holder"><span class="brackets-bottom" id="bracket-bottom-left">(</span><span class="link-text">LAVER LES<br>MAIN</span><span class="brackets-bottom" id="bracket-bottom-right">)</span></span>
             <span class="link-holder"><span class="brackets-bottom" id="bracket-bottom-left">(</span><span class="link-text">PORTEZ UN<br>MASQUE</span><span class="brackets-bottom" id="bracket-bottom-right">)</span></span>
             <span class="link-holder"><span class="brackets-bottom" id="bracket-bottom-left">(</span><span class="link-text">L'ÉLOIGNEMENT<br>PHYSIQUE</span><span class="brackets-bottom" id="bracket-bottom-right">)</span></span>
